create models, view, and controller folders

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -16,6 +16,8 @@
   <body>
     <div class="wrapper">
 
+      <h1 align="center">Welcome to Maxwell's Dogs!</h1>
+
         <%= yield %>
 
       <footer class="branding">
