add new files to views

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -16,7 +16,9 @@
   <body>
     <div class="wrapper">
 
-      <h1 align="center">Welcome to Maxwell's Dogs!</h1>
+      <h1 align="center">Welcome to Maxwell's Dogs!</h1><br>
+
+      <img src="https://cdn.whole-dog-journal.com/media/newspics//p1cns1iq891prp11f31mk3hsljm66.jpg" alt="walking-dogs" class="center"><br>
 
         <%= yield %>
 
