--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,6 @@
 <div align="center">
 
-  <input type="submit" name="submit" value="Signup">
+  <a href="/signup"><input type="submit" name="submit" value="Signup"></a>
 
   <input type="submit" name="submit" value="Login">
 </div>
