--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -2,5 +2,5 @@
 
   <a href="/signup"><input type="submit" name="submit" value="Signup"></a>
 
-  <input type="submit" name="submit" value="Login">
+  <a href="/login"><input type="submit" name="submit" value="Login"></a>
 </div>
