add login page, write helpers methods

--- a/app/views/dogwalkers/login.erb
+++ b/app/views/dogwalkers/login.erb
@@ -1,4 +1,4 @@
-<form action="/signup" method="post" class="center">
+<form action="/login" method="post" class="center">
 
   <label for="username">Username: </label>
   <input type="text" name="username" value=""><br>
