--- a/app/views/dogwalkers/show.erb
+++ b/app/views/dogwalkers/show.erb
@@ -1,1 +1,7 @@
-<%=@dogwalker.name%>
+<h1 class="center"> <%= @dogwalker.name %></h1>
+
+<!--<%= @dogwalker.walks.each do |walk|
+  walk.pickup_address
+end%>-->
+
+<a href="/walks/new"><input class="center" type="button" name="new_walk" value="New Walk"></a>
