--- a/app/views/walks/new.erb
+++ b/app/views/walks/new.erb
@@ -6,8 +6,8 @@
   <input type="text" name="dog[name]" value=""><br>
 
 
-  <label for="pickup_location">Pickup Location: </label>
-  <input type="text" name="pickup_location" value=""><br>
+  <label for="address">Address: </label>
+  <input type="text" name="address" value=""><br>
 
   <label for="pickup_time">Pickup Time: </label>
   <input type="text" name="pickup_time" value=""><br>
