modify dogwalkers views

--- a/app/views/dogwalkers/show.erb
+++ b/app/views/dogwalkers/show.erb
@@ -4,4 +4,6 @@
   <%= walk.address %>
 <% end %>
 
+
+<a href="/dogs/new"><input class = "center" type="button" name="add_dog" value="Add New Dog"></a>
 <a href="/walks/new"><input class="center" type="button" name="new_walk" value="New Walk"></a>
