added friends column to dogs

--- a/app/views/dogwalkers/show.erb
+++ b/app/views/dogwalkers/show.erb
@@ -1,7 +1,7 @@
 <h1 class="center"> <%= @dogwalker.name %></h1>
 
 <% @dogwalker.walks.each do |walk| %>
-  <%= walk.address %>
+  <%= walk.address %><br>
 <% end %>
 
 
