--- a/app/views/dogs/new.erb
+++ b/app/views/dogs/new.erb
@@ -8,8 +8,8 @@
   <input type="text" name="dog[temperament]" value=""><br>
 
 
-  <label for="dog[][friends]">friends: </label>
-  <input type="text" name="dog[][friends]" value=""><br>
+  <label for="dog[friends][]">friends: </label>
+  <input type="text" name="dog[friends][]" value=""><br>
 
   <input type="submit" name="submit" value="Submit">
 
