changed walks edit view, dogs edit view

--- a/app/views/dogs/show.erb
+++ b/app/views/dogs/show.erb
@@ -1,3 +1,5 @@
 <h2>Name: <%= @dog.name %><br></h1>
 <h2>Temperament: <%= @dog.temperament %><br></h2>
 <h2><%= @dog.friends %></h2>
+
+<a href="/dogs/<%= @dog.id %>/edit">Edit Dog</a>
