--- a/app/views/walks/index.erb
+++ b/app/views/walks/index.erb
@@ -6,3 +6,5 @@
 <% end %>
 
 <a href="/walks/new"><input class="center" type="button" name="new_walk" value="New Walk"></a>
+
+<a href="/logout">Logout</a>
