--- a/app/views/walks/index.erb
+++ b/app/views/walks/index.erb
@@ -7,4 +7,4 @@
 
 <a href="/walks/new"><input class="center" type="button" name="new_walk" value="New Walk"></a>
 
-<a href="/logout">Logout</a>
+<a href="/logout"><input class="center" type="button" name="logout" value="Logout"></a>
