added owner_name column to dogs

--- a/app/views/dogs/new.erb
+++ b/app/views/dogs/new.erb
@@ -7,6 +7,9 @@
   <label for="dog[temperament]">Temperament: </label>
   <input type="text" name="dog[temperament]" value=""><br>
 
+  <label for="dog[owner_name]">Owner Name: </label>
+  <input type="text" name="dog[owner_name]" value=""><br>
+
 
   <label for="dog[friends][]">friends: </label>
   <input type="text" name="dog[friends][]" value=""><br>
