--- a/app/views/dogs/show.erb
+++ b/app/views/dogs/show.erb
@@ -1,5 +1,6 @@
-<h2>Name: <%= @dog.name %><br></h1>
-<h2>Temperament: <%= @dog.temperament %><br></h2>
+<h2>Name: <%= @dog.name %></h1><br>
+<h2>Temperament: <%= @dog.temperament %></h2><br>
+<h2>Dog Owner: <%= @dog.owner_name %></h2><br>
 <h2><%= @dog.friends %></h2>
 
 <a href="/dogs/<%= @dog.id %>/edit">Edit Dog</a>
