--- a/app/views/walks/show.erb
+++ b/app/views/walks/show.erb
@@ -1,4 +1,5 @@
 <h1><%= @walk.pickup_time %> - <%= @walk.dropoff_time %></h1>
+<h2><%= @walk.address %></h2>
 
 <a href="/walks/<%= @walk.id %>/edit"><input type="submit" name="submit" value="Edit Walk"><br>
 
