add delete form to walk/show

--- a/app/views/walks/show.erb
+++ b/app/views/walks/show.erb
@@ -3,9 +3,8 @@
 
 <a href="/walks/<%= @walk.id %>/edit"><input type="submit" name="submit" value="Edit Walk"><br>
 
-<form action="/walks/<%= @walk.id %>" method="post">
+<form action="/walks/<%= @walk.id %>/delete" method="post">
   <input id= "hidden" type="hidden" name="_method" value="DELETE">
   <input type="submit" value="Delete Walk"><br><br>
-  <a href="/logout"><input class="center" type="button" name="logout" value="Logout"></a>
-
 </form>
+  <a href="/logout"><input class="center" type="button" name="logout" value="Logout"></a>
