changed views of walks and dogs

--- a/app/views/dogs/edit.erb
+++ b/app/views/dogs/edit.erb
@@ -5,6 +5,9 @@
   <label for="dog[name]">Name: </label>
   <input type="text" name="dog[name]" value=""><br>
 
+  <label for="dog[owner_name]"> Owner: </label>
+  <input type="text" name="dog[owner_name]" value=""><br>
+
 
   <label for="dog[temperament]">Temperament: </label>
   <input type="text" name="dog[temperament]" value=""><br>
