--- a/app/views/dogwalkers/show.erb
+++ b/app/views/dogwalkers/show.erb
@@ -5,3 +5,6 @@
 <% end %>
 
 <a href="/walks/new"><input class="center" type="button" name="new_walk" value="New Walk"></a>
+<a href="/walks"><input class="center" type="button" name="existing_walks" value="Existing Walks"></a>
+
+<a href="/logout"><input class="center" type="button" name="logout" value="Logout"></a>
