--- a/app/views/walks/new.erb
+++ b/app/views/walks/new.erb
@@ -2,6 +2,12 @@
 
   <h1>New Walk</h1>
 
+  <label>Choose a dog: </label><br>
+
+  <% Dog.all.each do |dog|%>
+      <input type="checkbox" name="walk[dogs][]" value="<%=dog.id%>" id="<%=dog.id%>"><%=dog.name%><br></input>
+  <%end%>
+
   <label for="dog[name]">Dog: </label>
   <input type="text" name="dog[name]" value=""><br>
 
