--- a/app/views/walks/new.erb
+++ b/app/views/walks/new.erb
@@ -2,24 +2,31 @@
 
   <h1>New Walk</h1>
 
-  <label>Choose a dog: </label><br>
+  <% if !Dog.all.empty? %>
+    <label> Choose a dog: </label><br>
 
-  <% Dog.all.each do |dog|%>
+    <% Dog.all.each do |dog|%>
+    <% if dog.name %>
       <input type="checkbox" name="walk[dogs][]" value="<%=dog.id%>" id="<%=dog.id%>"><%=dog.name%><br></input>
-  <%end%>
+    <% end %>
+    <% end %>
+<% end%>
 
   <label for="dog[name]">Dog: </label>
   <input type="text" name="dog[name]" value=""><br>
+
+  <label for="date">Date: </label>
+  <input type="text" name="" value=""><br>
 
 
   <label for="address">Address: </label>
   <input type="text" name="address" value=""><br>
 
   <label for="pickup_time">Pickup Time: </label>
-  <input type="text" name="pickup_time" value=""><br>
+  <input type="time" id="pickup_time" name="pickup_time" value="" min="9:00" max="18:00" required><br>
 
-  <label for="dropoff_time">Dropoff Time: </label>
-  <input type="text" name="dropoff_time" value=""><br>
+  <label for="length">Length of walk: </label>
+  <input type="length" name="" value="">
 
   <input type="submit" name="submit" value="Submit">
 
