--- a/app/views/dogwalkers/show.erb
+++ b/app/views/dogwalkers/show.erb
@@ -1,7 +1,9 @@
 <h1 class="center"> <%= @dogwalker.name %></h1>
 
+<label class="center" for=""> Existing Walks: </label>
+
 <% @dogwalker.walks.each do |walk| %>
-  <a href="/walks/<%= walk.id %>"><li class="center"><%= walk.pickup_time %> - <%= walk.dropoff_time %></li></a><br>
+  <a href="/walks/<%= walk.id %>"><li class="center"><%= walk.pickup_time %> - <%= walk.date %></li> - <% walk.dogs.map do |dog| %><%= dog.name %><% end %></a>
 <% end %>
 
 <a href="/walks/new"><input class="center" type="button" name="new_walk" value="New Walk"></a>
