--- a/app/views/dogwalkers/show.erb
+++ b/app/views/dogwalkers/show.erb
@@ -1,6 +1,9 @@
 <h1 class="center"> <%= @dogwalker.name %></h1>
 
-<label class="center" for=""> Existing Walks: </label>
+<% if !@dogwalker.walks.empty? %>
+  <label class="center" for=""> Existing Walks: </label>
+<% end %>
+
 
 <% @dogwalker.walks.each do |walk| %>
   <a href="/walks/<%= walk.id %>"><li class="center"><%= walk.pickup_time %> - <%= walk.date %></li> - <% walk.dogs.map do |dog| %><%= dog.name %><% end %></a>
