edit walk views and dog views

--- a/app/views/dogs/edit.erb
+++ b/app/views/dogs/edit.erb
@@ -2,19 +2,20 @@
 
   <input id="hidden" type="hidden"  name="_method" value="PATCH">
 
-  <label for="dog[name]">Name: </label>
+  <label for="dog[name]"> Name: </label>
   <input type="text" name="dog[name]" value=""><br>
 
   <label for="dog[owner_name]"> Owner: </label>
   <input type="text" name="dog[owner_name]" value=""><br>
 
 
-  <label for="dog[temperament]">Temperament: </label>
-  <input type="text" name="dog[temperament]" value=""><br>
+  <label for="dog[address]"> Address: </label>
+  <input type="text" name="dog[address]" value=""><br>
 
 
-  <label for="dog[friends][]">friends: </label>
-  <input type="text" name="dog[friends][]" value=""><br>
+  <label for="dog[description]"> Description: </label>
+  <input type="textarea" name="dog[description]" value=""><br>
+
 
   <input type="submit" name="submit" value="Submit">
 
