--- a/app/views/walks/show.erb
+++ b/app/views/walks/show.erb
@@ -1,5 +1,11 @@
 <h1><u><%= @walk.pickup_time %> - <%= @walk.date %></u></h1>
-<h2><%= @walk.address %></h2>
+
+<h2> Dogs: </h2>
+
+<% @walk.dogs.each_with_index do |dog, index| %>
+
+  <%= index+1 %>. <%= dog.name %> - <%= dog.address %>
+<% end%><br><br>
 
 <a href="/walks/<%= @walk.id %>/edit"><input type="submit" name="submit" value="Edit Walk"><br>
 
