--- a/app/views/dogs/edit.erb
+++ b/app/views/dogs/edit.erb
@@ -2,15 +2,14 @@
 
   <input id="hidden" type="hidden"  name="_method" value="PATCH">
 
-  <label for="dog[name]"> Name: </label>
-  <input type="text" name="dog[name]" value=""><br>
+  <h2><%= @dog.name %></h1>
 
   <label for="dog[owner_name]"> Owner: </label>
-  <input type="text" name="dog[owner_name]" value=""><br>
+  <input type="text" name="dog[owner_name]" value="" required=><br>
 
 
   <label for="dog[address]"> Address: </label>
-  <input type="text" name="dog[address]" value=""><br>
+  <input type="text" name="dog[address]" value="" required><br>
 
 
   <label for="dog[description]"> Description: </label>
