--- a/app/views/walks/edit.erb
+++ b/app/views/walks/edit.erb
@@ -1,19 +1,36 @@
 <form action="/walks/<%= @walk.id %>/edit" method="post">
+  <input type="hidden" id="hidden" name="_method" value="patch">
 
-  <input id="hidden" type="hidden" name="_method" value="PATCH">
+  <h1><u><%= @walk.date %> - <%= @walk.pickup_time %></u></h1>
 
-  <h1>Edit Walk</h1>
+  <h3> Dogs: </h3>
+    <% @walk.dogs.each do |dog| %>
+      <%= dog.name %>
+    <% end %>
 
+  <h3>Add a new dog:</h3>
 
-  <label for="address">Address: </label>
-  <input type="text" name="walk[address]" value=""><br>
+  <label for="dog[name]">Dog: </label>
+  <input type="text" name="dog[name]" value="" required>
 
-  <label for="pickup_time">Pickup Time: </label>
-  <input type="text" name="walk[pickup_time]" value=""><br>
+  <label for="dog[owner_name]">Owner: </label>
+  <input type="text" name="dog[owner_name]" value="">
 
-  <label for="dropoff_time">Dropoff Time: </label>
-  <input type="text" name="walk[dropoff_time]" value=""><br>
+  <label for="dog[address]">Address: </label>
+  <input type="text" name="dog[address]" value="" required><br><br>
+
+  <label for="walk[date]">Date: </label>
+  <input type="date" name="walk[date]" value="" min="2019-01-01" max="2019-31-12" required><br>
+
+  <label for="walk[pickup_time]">Pickup Time: </label>
+  <input type="time" id="pickup_time" name="walk[pickup_time]" value="" min="9:00" max="18:00" required>
+
+  <span>Walk hours are 9am to 6pm</span><br>
+
+  <label for="length">Length of walk,15 or 30mins: </label>
+  <input type="text" name="walk[length]" value="">mins<br>
 
   <input type="submit" name="submit" value="Submit">
+
 
 </form>
