--- a/app/views/dogwalkers/signup.erb
+++ b/app/views/dogwalkers/signup.erb
@@ -6,7 +6,7 @@
   <input type="text" name="username" value=""><br>
 
   <label for="password">Password: </label>
-  <input type="text" name="password" value=""><br>
+  <input type="password" name="password" value=""><br>
 
   <input type="submit" name="submit" value="Submit">
 </form>
