--- a/app/views/walks/new.erb
+++ b/app/views/walks/new.erb
@@ -5,19 +5,19 @@
   <h3>Add a new dog:</h3>
 
   <label for="dog[name]">Dog: </label>
-  <input type="text" name="dog[name]" value="" required>
+  <input type="text" name="dog[name]" value="">
 
   <label for="dog[owner_name]">Owner: </label>
   <input type="text" name="dog[owner_name]" value="">
 
   <label for="dog[address]">Address: </label>
-  <input type="text" name="dog[address]" value="" required><br><br>
+  <input type="text" name="dog[address]" value=""><br><br>
 
   <label for="walk[date]">Date: </label>
   <input type="date" name="walk[date]" value="" min="2019-01-01" max="2019-31-12" required><br>
 
   <label for="walk[pickup_time]">Pickup Time: </label>
-  <input type="time" id="pickup_time" name="walk[pickup_time]" value="" min="9:00" max="18:00" required>
+  <input type="time" id="pickup_time" name="walk[pickup_time]" value="" min="9:00" max="18:00">
 
   <span>Walk hours are 9am to 6pm</span><br>
 
